// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme context <Consumer /> the consumer values are correct 1`] = `
Object {
  "key": undefined,
  "setTheme": [Function],
  "theme": Object {
    "config": Object {
      "colors": Object {
        "primary": "tomato",
        "secondary": "papayawhip",
      },
      "typography": Object {
        "fontFamily": "Arial",
      },
    },
    "key": "iohk-dark",
  },
  "themes": Array [
    Object {
      "config": Object {
        "colors": Object {
          "primary": "tomato",
          "secondary": "papayawhip",
        },
        "typography": Object {
          "fontFamily": "Arial",
        },
      },
      "key": "iohk-dark",
    },
    Object {
      "config": Object {
        "colors": Object {
          "primary": "thistle",
          "secondary": "dodgerblue",
        },
        "typography": Object {
          "fontFamily": "Helvetica",
        },
      },
      "key": "iohk-light",
    },
  ],
}
`;

exports[`Theme context <Consumer /> when setTheme is called the consumer values are correctly updated 1`] = `
Object {
  "key": undefined,
  "setTheme": [Function],
  "theme": Object {
    "config": Object {
      "colors": Object {
        "primary": "tomato",
        "secondary": "papayawhip",
      },
      "typography": Object {
        "fontFamily": "Arial",
      },
    },
    "key": "iohk-dark",
  },
  "themes": Array [
    Object {
      "config": Object {
        "colors": Object {
          "primary": "tomato",
          "secondary": "papayawhip",
        },
        "typography": Object {
          "fontFamily": "Arial",
        },
      },
      "key": "iohk-dark",
    },
    Object {
      "config": Object {
        "colors": Object {
          "primary": "thistle",
          "secondary": "dodgerblue",
        },
        "typography": Object {
          "fontFamily": "Helvetica",
        },
      },
      "key": "iohk-light",
    },
  ],
}
`;

exports[`Theme context <Provider /> it renders the provider component correctly 1`] = `
<ContextProvider
  value={
    Object {
      "setTheme": [Function],
      "theme": Object {
        "config": Object {
          "colors": Object {
            "primary": "tomato",
            "secondary": "papayawhip",
          },
          "typography": Object {
            "fontFamily": "Arial",
          },
        },
        "key": "iohk-dark",
      },
      "themes": Array [
        Object {
          "config": Object {
            "colors": Object {
              "primary": "tomato",
              "secondary": "papayawhip",
            },
            "typography": Object {
              "fontFamily": "Arial",
            },
          },
          "key": "iohk-dark",
        },
        Object {
          "config": Object {
            "colors": Object {
              "primary": "thistle",
              "secondary": "dodgerblue",
            },
            "typography": Object {
              "fontFamily": "Helvetica",
            },
          },
          "key": "iohk-light",
        },
      ],
    }
  }
>
  <p>
    Theme provider children
  </p>
</ContextProvider>
`;
